<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_window"
    android:layout_width="300dp"
    android:layout_height="250dp"
    android:layout_gravity="center"
    android:background="@drawable/dialog_bg_teal_700"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/dialogLine1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialogHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/teal_700"
            android:textSize="38dp"
            tools:text="@string/app_name" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialogLine2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/dialogLine2_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDialogOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_style_teal_700"
                android:text="@string/ok"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/teal_700" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialogLine2_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDialogCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_style_teal_700"
                android:text="@string/cancel"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/teal_700" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>